...
      />
      {state.storageIsEncryptedSwitchEnabled && (
        <ListItem
          onPress={navigateToPlausibleDeniability}
          title={loc.settings.plausible_deniability}
          chevron
          testID="PlausibleDeniabilityButton"
          Component={TouchableOpacityWrapper}
          containerStyle={[styles.row, styleHooks.root]}
        />
      )}
      <PromptPasswordConfirmationModal
        ref={promptRef}
...
