...
          <BlueLoading />
        ) : (
          (() => {
            if (this.state.isOk) {
              return (
                <View style={styles.center}>
                  <BlueText testID="SelfTestOk" h4>
                    OK
                  </BlueText>
                  <BlueSpacing20 />
                  <BlueText>{loc.settings.about_selftest_ok}</BlueText>
                </View>
              );
...
