export const AvailableLanguages: readonly TLanguage[] = Object.freeze([
  { label: 'English', value: 'en' },
  { label: 'Afrikaans (AFR)', value: 'zar_afr' },
  { label: 'العربية (AR)', value: 'ar', isRTL: true },
  { label: 'Български (BG)', value: 'bg_bg' },
  { label: 'Беларускі (BE)', value: 'be' },
  { label: 'Català (CA)', value: 'ca' },
  { label: 'Chinese (TW)', value: 'zh_tw' },
  { label: 'Chinese (ZH)', value: 'zh_cn' },
  { label: 'Croatian (HR)', value: 'hr_hr' },
  { label: 'Cymraeg (CY)', value: 'cy' },
  { label: 'Česky (CZ)', value: 'cs_cz' },
  { label: 'Danish (DK)', value: 'da_dk' },
  { label: 'Deutsch (DE)', value: 'de_de' },
  { label: 'Español (Spain) (es_ES)', value: 'es' },
...
