export { default } from '@/src/screen/settings/Language';
