...
    return Promise.resolve();
  }

  async createAccount(isTest: boolean = false) {
    const response = await fetch(this.baseURI + '/create', {
      method: 'POST',
      body: JSON.stringify({ partnerid: 'bluewallet', accounttype: (isTest && 'test') || 'common' }),
      headers: { 'Access-Control-Allow-Origin': '*', 'Content-Type': 'application/json' },
    });
    const json = await response.json();
    if (!json) {
      throw new Error('API failure: ' + response.statusText);
    }
...
